fixing point 3 dan 5 private label

--- a/src/app/pages/user-management/private-label/orderto-supplier/index/orderto-supplier-index.component.html
+++ b/src/app/pages/user-management/private-label/orderto-supplier/index/orderto-supplier-index.component.html
@@ -110,6 +110,7 @@
         <ngx-datatable-column name="Action" headerClass="textright" [sortable]="false">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             <div class="button-row" style="margin-left: -10px; padding-top: 5px; padding-bottom: 5px;">
+              <a #downloadLink></a>
               <button mat-stroked-button color="" (click)="getDetailOrder(row.id)">
                 CETAK PO
               </button>
