hide doc - for deployment

--- a/src/app/pages/user-management/private-label/orderto-supplier/index/orderto-supplier-index.component.html
+++ b/src/app/pages/user-management/private-label/orderto-supplier/index/orderto-supplier-index.component.html
@@ -114,9 +114,9 @@
               <button mat-stroked-button color="" (click)="getDetailOrder(row.id)">
                 CETAK PO
               </button>
-              <button mat-stroked-button color="" (click)="getDokumen(row)" style="margin-top: 2px;">
+              <!-- <button mat-stroked-button color="" (click)="getDokumen(row)" style="margin-top: 2px;">
                 DOKUMEN
-              </button>
+              </button> -->
             </div>
           </ng-template>
         </ngx-datatable-column>
