--- a/src/app/pages/user-management/wholesaler/edit/wholesaler-edit.component.html
+++ b/src/app/pages/user-management/wholesaler/edit/wholesaler-edit.component.html
@@ -128,7 +128,7 @@
             </div>
           </div>
 
-          <div [formGroup]="formDoc" class="ayo-middle pt-24" fxLayout="column">
+          <!-- <div [formGroup]="formDoc" class="ayo-middle pt-24" fxLayout="column">
             <div fxLayout="row" fxFlex="100">
               <mat-form-field class="is-light" fxFlex="30">
                 <input matInput placeholder="Nomor KTP" type="text" formControlName="ktp">
@@ -163,7 +163,7 @@
                 </button>
               </div>
             </div>
-          </div>
+          </div> -->
 
           <!-- <mat-form-field fxFlex="100" class="is-light">
                 <input matInput type="text" placeholder="Area" formControlName="area_code">
