--- a/src/app/pages/user-management/private-label/orderto-supplier/detail/orderto-supplier-detail.component.html
+++ b/src/app/pages/user-management/private-label/orderto-supplier/detail/orderto-supplier-detail.component.html
@@ -254,7 +254,7 @@
             </div>
           </div>
         </mat-tab>
-        <mat-tab label="Dokumen">
+        <!-- <mat-tab label="Dokumen">
           <div class="attachment-layout" fxLayout="column" fxLayoutAlign="center center" *ngIf="detailOrder?.document">
             <img class="attachment-img" id="image4" [src]="detailOrder?.document_image_url" />
           </div>
@@ -269,15 +269,7 @@
             </mat-form-field>
           </div>
           <p style="text-align: center;" *ngIf="!detailOrder.document">Tidak Ada Dokumen yang Ditampilkan</p>
-          <!-- <div fxLayout="row" style="margin-left: 15px;">
-            <mat-form-field fxFlex="30">
-              <input matInput [formControl]="npwp" placeholder="Nomor NPWP" />
-              <mat-icon matSuffix (click)="copyMessage('npwp')" style="cursor: pointer;" matTooltip="Salin Nomor NPWP">
-                content_copy
-              </mat-icon>
-            </mat-form-field>
-    </div> -->
-        </mat-tab>
+        </mat-tab> -->
       </mat-tab-group>
     </div>
   </div>
