--- a/src/app/pages/src-catalogue/product-catalogue/create/product-catalogue-create.component.html
+++ b/src/app/pages/src-catalogue/product-catalogue/create/product-catalogue-create.component.html
@@ -21,13 +21,15 @@
           </div>
 
           <div fxLayout="row">
-            <mat-form-field fxFlex="50" class="is-light form-primary">
-              <textarea matInput rows="2" formControlName="description" placeholder="Deskripsi Produk"></textarea>
+            <div fxLayout="column">
+              <p>Deskripsi Produk</p>
+              <textarea [froalaEditor]="options" formControlName="description"
+                placeholder="Deskripsi Produk"></textarea>
               <mat-error
                 *ngIf="formProduct.controls['description'].hasError('required') && formProduct.controls['description'].touched">
                 Deskripsi Produk harus diisi
               </mat-error>
-            </mat-form-field>
+            </div>
           </div>
 
           <div fxLayout="row" *ngIf="!vendor_id">
