--- a/src/app/pages/dte/task-verification/dialog/confirm-dialog-tsm/confirm-dialog-tsm.component.html
+++ b/src/app/pages/dte/task-verification/dialog/confirm-dialog-tsm/confirm-dialog-tsm.component.html
@@ -119,7 +119,8 @@
           <img [src]="item.question_image" *ngIf="item.question_image" class="answer-img mb-8" (click)="previewImage(item.question_image)"/>
           <img [src]="dataSubmission.data.questions[i].question_image" *ngIf="!item.question_image && dataSubmission.data.questions[i].question_image" 
           class="answer-img mb-8" (click)="previewImage(dataSubmission.data.questions[i].question_image)"/>
-          <span style="text-align: left;">{{item.question}}</span>
+          <!-- <span style="text-align: left;">{{item.question}}</span> -->
+          <div style="text-align: left;" [innerHtml]="item.question | safeHtml"></div>
           <div *ngIf="item.type == 'radio'" fxLayout="column" fxLayoutAlign="start start">
             <div *ngFor="let answer of item.additional;" fxFlex="100" fxLayout="row" fxLayoutAlign="start center">
                 <mat-icon class="secondary-text" fxFlex="5" *ngIf="answer !== item.answer[0]">
