--- a/src/app/pages/user-management/wholesaler/index/wholesaler-index.component.html
+++ b/src/app/pages/user-management/wholesaler/index/wholesaler-index.component.html
@@ -106,6 +106,9 @@
           </ng-template>
         </ngx-datatable-column> -->
 
+        <ngx-datatable-column name="Wholesaler Id" prop="id" [sortable]="false">
+        </ngx-datatable-column>
+
         <ngx-datatable-column name="Nama Toko" prop="name">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             <a class="direct-edit" (click)="directDetail(row)">{{row.name}} </a>
@@ -119,6 +122,17 @@
         </ngx-datatable-column>
 
         <ngx-datatable-column name="Kode WS" prop="code" summary-template="activeCell"></ngx-datatable-column>
+
+        <!-- TOKO MITRA CABANG -->
+        <ngx-datatable-column name="Toko Cabang" prop="is_branch" [sortable]="false"> 
+          <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+            <div class="name-container" *ngIf="row.is_branch">
+              <p class="status text-truncate h6 p-4 toko-cabang mat-green-800-bg">
+                <mat-icon class="s-20">done</mat-icon>
+              </p>
+            </div>
+          </ng-template>
+        </ngx-datatable-column>
 
         <ngx-datatable-column [width]="120" name="Status" prop="status">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
