--- a/src/app/pages/user-management/private-label/panel-mitra/edit/panel-mitra-edit.component.html
+++ b/src/app/pages/user-management/private-label/panel-mitra/edit/panel-mitra-edit.component.html
@@ -9,54 +9,66 @@
           <form [formGroup]="formInput" autoComplete="off">
             <div fxLayout="row wrap" fxLayoutGap="20px" class="top-table p-8" fxLayoutAlign="center center">
               <mat-form-field fxLayout="row" fxLayoutAlign="center center">
-                <mat-select placeholder="Pilih Kategori Produk" formControlName="filtercategory" (selectionChange)="selectionChangeFilterCategory($event)">
+                <mat-select placeholder="Pilih Kategori Produk" formControlName="filtercategory"
+                  (selectionChange)="selectionChangeFilterCategory($event)">
                   <mat-option [value]="item.id" *ngFor="let item of filterCategory">{{item.name}}</mat-option>
                 </mat-select>
-                <mat-error *ngIf="formInput.controls['filtercategory'].hasError('required') && formInput.controls['filtercategory'].touched">
+                <mat-error
+                  *ngIf="formInput.controls['filtercategory'].hasError('required') && formInput.controls['filtercategory'].touched">
                   Kategori harus diisi
                 </mat-error>
               </mat-form-field>
               <mat-form-field fxLayoutAlign="center center">
-                <mat-select placeholder="Pilih Produk" formControlName="filterproduct" (selectionChange)="selectionChangeFilterProduct($event)">
+                <mat-select placeholder="Pilih Produk" formControlName="filterproduct"
+                  (selectionChange)="selectionChangeFilterProduct($event)">
                   <mat-option>
                     <ngx-mat-select-search [formControl]="filterProdukSearch" [placeholderLabel]="'Cari Produk...'"
-                    [noEntriesFoundLabel]="'Tidak ada produk yang ditemukan'"></ngx-mat-select-search>
+                      [noEntriesFoundLabel]="'Tidak ada produk yang ditemukan'"></ngx-mat-select-search>
                   </mat-option>
                   <mat-option [value]="item.id" *ngFor="let item of filterProducts">{{item.name}}</mat-option>
                 </mat-select>
-                <mat-error *ngIf="formInput.controls['filterproduct'].hasError('required') && formInput.controls['filterproduct'].touched">
+                <mat-error
+                  *ngIf="formInput.controls['filterproduct'].hasError('required') && formInput.controls['filterproduct'].touched">
                   Produk harus diisi
                 </mat-error>
               </mat-form-field>
               <mat-form-field fxLayoutAlign="center center">
-                <mat-select placeholder="Pilih Supplier" formControlName="filtersupplier" (selectionChange)="selectionChangeFilterSupplier($event)">
+                <mat-select placeholder="Pilih Supplier" formControlName="filtersupplier"
+                  (selectionChange)="selectionChangeFilterSupplier($event)">
                   <mat-option>
                     <ngx-mat-select-search [formControl]="filterSupplierSearch" [placeholderLabel]="'Cari Supplier...'"
-                    [noEntriesFoundLabel]="'Tidak ada produk yang ditemukan'"></ngx-mat-select-search>
+                      [noEntriesFoundLabel]="'Tidak ada produk yang ditemukan'"></ngx-mat-select-search>
                   </mat-option>
                   <mat-option [value]="item.id" *ngFor="let item of filterSupplier">{{item.name}}</mat-option>
                 </mat-select>
-                <mat-error *ngIf="formInput.controls['filtersupplier'].hasError('required') && formInput.controls['filtersupplier'].touched">
+                <mat-error
+                  *ngIf="formInput.controls['filtersupplier'].hasError('required') && formInput.controls['filtersupplier'].touched">
                   Supplier harus diisi
                 </mat-error>
               </mat-form-field>
-              <div class="button-row">
-                <button mat-raised-button style="width: 160px" color="primary" (click)="aturPanelMitra()">ATUR PANEL MITRA</button>
+              <div class="button-row" *ngIf="!isDetail">
+                <button mat-raised-button style="width: 160px" color="primary" (click)="aturPanelMitra()">ATUR PANEL
+                  MITRA</button>
               </div>
             </div>
           </form>
         </div>
         <div fxLayout="column">
           <label style="font-size: 10px;">Mitra Terpilih</label>
-          <span style="font-size: 32px;">{{(allRowsSelected ? pagination.total :  selected.length) | rupiahFormaterWithoutRp}}</span>
+          <span style="font-size: 32px;">{{(allRowsSelected ? pagination.total : selected.length) |
+            rupiahFormaterWithoutRp}}</span>
         </div>
       </div>
       <div class='import-export-bar p-16' fxLayoutGap="20px" fxLayout="row wrap" fxLayoutAlign="end center">
-        <div class="button-row">
-          <button mat-flat-button style="width: 160px" color="white" (click)="importMitra()"><mat-icon>vertical_align_bottom</mat-icon> Import XLS</button>
+        <div class="button-row" *ngIf="!isDetail">
+          <button mat-flat-button style="width: 160px" color="white" (click)="importMitra()">
+            <mat-icon>vertical_align_bottom</mat-icon> Import XLS
+          </button>
         </div>
         <div class="button-row">
-          <button mat-flat-button style="width: 160px" color="white" (click)="exportMitra()"><mat-icon>vertical_align_top</mat-icon> Export XLS</button>
+          <button mat-flat-button style="width: 160px" color="white" (click)="exportMitra()">
+            <mat-icon>vertical_align_top</mat-icon> Export XLS
+          </button>
         </div>
       </div>
 
@@ -69,47 +81,53 @@
           </mat-form-field>
           <mat-form-field fxLayout="row" fxLayoutAlign="center center">
             <mat-select placeholder="Zone" formControlName="zone" multiple>
-              <mat-option [value]="item.id" *ngFor="let item of filteringGeotree(list['zone'])">{{item.name === 'all' ? 'Semua
+              <mat-option [value]="item.id" *ngFor="let item of filteringGeotree(list['zone'])">{{item.name === 'all' ?
+                'Semua
                 Zona' :
                 item.code}}</mat-option>
             </mat-select>
           </mat-form-field>
           <mat-form-field fxLayout="row" fxLayoutAlign="center center">
             <mat-select placeholder="Regional" formControlName="region" multiple>
-              <mat-option [value]="item.id" *ngFor="let item of filteringGeotree(list['region'])">{{item.name === 'all' ? 'Semua
+              <mat-option [value]="item.id" *ngFor="let item of filteringGeotree(list['region'])">{{item.name === 'all'
+                ? 'Semua
                 Regional' :
                 item.code}}</mat-option>
             </mat-select>
           </mat-form-field>
           <mat-form-field fxLayout="row" fxLayoutAlign="center center">
             <mat-select placeholder="Area" formControlName="area" multiple>
-              <mat-option [value]="item.id" *ngFor="let item of filteringGeotree(list['area'])">{{item.name === 'all' ? 'Semua
+              <mat-option [value]="item.id" *ngFor="let item of filteringGeotree(list['area'])">{{item.name === 'all' ?
+                'Semua
                 Area' :
                 item.code}}</mat-option>
             </mat-select>
           </mat-form-field>
           <mat-form-field fxLayout="row" fxLayoutAlign="center center">
             <mat-select placeholder="Salespoint" formControlName="salespoint" multiple>
-              <mat-option [value]="item.id" *ngFor="let item of filteringGeotree(list['salespoint'])">{{item.name === 'all' ? 'Semua
+              <mat-option [value]="item.id" *ngFor="let item of filteringGeotree(list['salespoint'])">{{item.name ===
+                'all' ? 'Semua
                 Salespoint' :
                 item.code}}</mat-option>
             </mat-select>
           </mat-form-field>
           <mat-form-field fxLayout="row" fxLayoutAlign="center center">
             <mat-select placeholder="District" formControlName="district" multiple>
-              <mat-option [value]="item.id" *ngFor="let item of filteringGeotree(list['district'])">{{item.name === 'all' ? 'Semua
+              <mat-option [value]="item.id" *ngFor="let item of filteringGeotree(list['district'])">{{item.name ===
+                'all' ? 'Semua
                 District' :
                 item.code}}</mat-option>
             </mat-select>
           </mat-form-field>
           <mat-form-field fxLayout="row" fxLayoutAlign="center center">
             <mat-select placeholder="Territory" formControlName="territory" multiple>
-              <mat-option [value]="item.id" *ngFor="let item of filteringGeotree(list['territory'])">{{item.name === 'all' ? 'Semua
+              <mat-option [value]="item.id" *ngFor="let item of filteringGeotree(list['territory'])">{{item.name ===
+                'all' ? 'Semua
                 Territory' :
                 item.code}}</mat-option>
             </mat-select>
           </mat-form-field>
-  
+
           <div class="search-field" fxLayout="row" fxLayoutAlign="center center">
             <mat-icon>search</mat-icon>
             <mat-form-field class="is-light tab-search">
@@ -117,23 +135,25 @@
             </mat-form-field>
           </div>
         </div>
-        </form>
+      </form>
 
       <ngx-datatable class="material" [rows]="rows" [loadingIndicator]="loadingIndicator" [columnMode]="'force'"
         [offset]="offsetPagination" [headerHeight]="48" [footerHeight]="56" [rowHeight]="'auto'" [scrollbarH]="true"
         [reorderable]="reorderable" [count]="pagination.total" [limit]="pagination.per_page" [externalPaging]="true"
-        [externalSorting]="true" (page)="setPage($event)" (sort)="onSort($event)" 
-        [selected]="selected" [selectAllRowsOnPage]="false" [selectionType]="'checkbox'" (select)="onSelect($event)" [rowIdentity]="getId">
+        [externalSorting]="true" (page)="setPage($event)" (sort)="onSort($event)" [selected]="selected"
+        [selectAllRowsOnPage]="false" [selectionType]="'checkbox'" (select)="onSelect($event)" [rowIdentity]="getId">
 
         <ngx-datatable-column [width]="68" [canAutoResize]="false" [sortable]="true">
-          <ng-template ngx-datatable-header-template >
+          <ng-template ngx-datatable-header-template>
             <mat-checkbox [checked]="allRowsSelected" (change)="selectFn(!allRowsSelected);"></mat-checkbox>
           </ng-template>
 
           <ng-template ngx-datatable-cell-template let-value="value" let-isSelected="isSelected"
             let-onCheckboxChangeFn="onCheckboxChangeFn">
-            <mat-checkbox [checked]="isSelected" (change)="onCheckboxChangeFn($event)" [disabled]="allRowsSelected" *ngIf="!allRowsSelected"></mat-checkbox>
-            <mat-checkbox [checked]="true" [disabled]="allRowsSelected" *ngIf="allRowsSelected" class="mat-checkbox-all"></mat-checkbox>
+            <mat-checkbox [checked]="isSelected" (change)="onCheckboxChangeFn($event)" [disabled]="allRowsSelected"
+              *ngIf="!allRowsSelected"></mat-checkbox>
+            <mat-checkbox [checked]="true" [disabled]="allRowsSelected" *ngIf="allRowsSelected"
+              class="mat-checkbox-all"></mat-checkbox>
           </ng-template>
         </ngx-datatable-column>
 
@@ -181,8 +201,9 @@
           </ng-template>
         </ngx-datatable-column> -->
       </ngx-datatable>
-      <div class="confirm p-24" fxLayout="row" fxLayoutAlign="center center">
-        <button mat-raised-button type="button" class="confirmation-button" fxFlex="30" fxFlex.gt-xs="20" (click)="onSave()">
+      <div class="confirm p-24" fxLayout="row" fxLayoutAlign="center center" *ngIf="!isDetail">
+        <button mat-raised-button type="button" class="confirmation-button" fxFlex="30" fxFlex.gt-xs="20"
+          (click)="onSave()">
           SIMPAN
         </button>
       </div>
