--- a/src/app/pages/b2b-voucher-inject/index/b2b-voucher-inject.component.html
+++ b/src/app/pages/b2b-voucher-inject/index/b2b-voucher-inject.component.html
@@ -51,7 +51,8 @@
         </ngx-datatable-column>
 
         <ngx-datatable-column name="Tanggal Dibagikan" prop="available_at">
-          <ng-template ngx-datatable-cell-template let-row="row" let-value="value">{{row.available_at | date: 'dd/MM/yyyy'}}</ng-template>
+          <ng-template ngx-datatable-cell-template let-row="row" let-value="value">{{row.available_at | date:
+            'dd/MM/yyyy'}}</ng-template>
         </ngx-datatable-column>
 
         <ngx-datatable-column name="Total Nilai Voucher" prop="nominal">
@@ -65,7 +66,16 @@
             HH:mm:ss'}}</ng-template>
         </ngx-datatable-column>
 
-        <ngx-datatable-column [width]="98" name="Tindakan" headerClass="textright" [sortable]="false" [frozenRight]="true">
+        <ngx-datatable-column name="Status" prop="end_date">
+          <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+            <p class="status text-truncate h6 p-4 status-order" [ngClass]="getStatusColor(row.status)">
+              {{ row.status_indo ? row.status_indo.toUpperCase() : row.status_indo }}
+            </p>
+          </ng-template>
+        </ngx-datatable-column>
+
+        <ngx-datatable-column [width]="98" name="Tindakan" headerClass="textright" [sortable]="false"
+          [frozenRight]="true">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value"
             style="justify-content: center !important">
             <div class="button-row" style="margin-left: -10px">
