fix: CDE-2622#TrackingMitraCabang - hide checkbox is branch

--- a/src/app/pages/user-management/wholesaler/edit/wholesaler-edit.component.html
+++ b/src/app/pages/user-management/wholesaler/edit/wholesaler-edit.component.html
@@ -248,7 +248,7 @@
             </mat-form-field>
           </div>
 
-          <div fxLayout="row" *ngIf="seeTokoCabang">
+          <div fxLayout="row" *ngIf="seeTokoCabang && !detailWholesaler.is_branch">
             <mat-checkbox class="mt-4 ml-4 mb-8" formControlName="branchShop">Mempunyai
               Toko Cabang</mat-checkbox>
           </div>
