--- a/src/app/pages/b2b-voucher-inject/create/b2b-voucher-inject-create.component.html
+++ b/src/app/pages/b2b-voucher-inject/create/b2b-voucher-inject-create.component.html
@@ -119,7 +119,7 @@
                       {{item.name ? item.name.toUpperCase() : item.name}}
                     </button>
                   </div>
-                  <div fxLayout="column" *ngIf="detailVoucher.status === 'published'">
+                  <div fxLayout="column" *ngIf="detailVoucher && detailVoucher.status === 'published'">
                     <button mat-raised-button type="button" fxFlex="20" style="margin-bottom: 10px;" disabled>
                       PUBLISHED
                     </button>
