fixing button hapus b2b voucher

--- a/src/app/pages/b2-bvoucher/index/b2-b-voucher.component.html
+++ b/src/app/pages/b2-bvoucher/index/b2-b-voucher.component.html
@@ -92,7 +92,7 @@
               <button mat-icon-button *ngIf="permission?.ubah" color="" (click)="directDetail(row)">
                 <mat-icon class="secondary-text">edit</mat-icon>
               </button>
-              <button mat-icon-button color="primary" (click)="deleteUser(row.id)"
+              <button mat-icon-button color="primary" (click)="deleteVoucher(row.id)"
                 [ngStyle]="{'cursor': !permission?.hapus ? 'no-drop' : ''}" [disabled]="!permission?.hapus">
                 <mat-icon>delete</mat-icon>
               </button>
