fixing save panel mitra voucher tidak merefresh detail

--- a/src/app/pages/b2-bvoucher/create/b2-b-voucher-create.component.html
+++ b/src/app/pages/b2-bvoucher/create/b2-b-voucher-create.component.html
@@ -201,7 +201,7 @@
           </div>
         </mat-tab>
         <mat-tab label="Panel Mitra" *ngIf="isDetail">
-          <app-panel-mitra-voucher></app-panel-mitra-voucher>
+          <app-panel-mitra-voucher (refreshDetail)="onRefreshDetail()"></app-panel-mitra-voucher>
         </mat-tab>
         <mat-tab label="Panel Retailer" *ngIf="isDetail">
           <div class="ayo-middle p-24" fxLayout="column">
