--- a/src/app/pages/b2-bvoucher/create/b2-b-voucher-create.component.html
+++ b/src/app/pages/b2-bvoucher/create/b2-b-voucher-create.component.html
@@ -174,7 +174,7 @@
                   </mat-select>
                 </mat-form-field>
               </div>
-              <div fxLayout="row">
+              <!-- <div fxLayout="row">
                 <div fxFlex="60"></div>
                 <div fxFlex="20">
                   <div fxLayout="column" *ngIf="listStatuses.length > 0 && permission.b2b_approval">
@@ -190,11 +190,20 @@
                     </button>
                   </div>
                 </div>
-              </div>
+              </div> -->
               <div class="confirm p-24" fxLayout="row" fxLayoutAlign="start">
                 <button mat-raised-button type="button" class="confirmation-button" fxFlex="30" fxFlex.gt-xs="20"
                   (click)="onSaveDetail()">
                   SIMPAN
+                </button>
+                <button *ngFor="let item of listStatuses" mat-raised-button type="button"
+                  [ngClass]="item.value === 'rejected' ? 'confirmation-button' : 'mat-green-800-bg'" fxFlex="20"
+                  style="margin-left: 10px;" (click)="takeAction(item)">
+                  {{item.name ? item.name.toUpperCase() : item.name}}
+                </button>
+                <button mat-raised-button type="button" *ngIf="detailVoucher && detailVoucher.status === 'published'"
+                  fxFlex="20" style="margin-left: 10px;" disabled>
+                  PUBLISHED
                 </button>
               </div>
             </form>
