fixing value total nilai voucher di inject b2b voucher

--- a/src/app/pages/b2b-voucher-inject/index/b2b-voucher-inject.component.html
+++ b/src/app/pages/b2b-voucher-inject/index/b2b-voucher-inject.component.html
@@ -57,7 +57,7 @@
 
         <ngx-datatable-column name="Total Nilai Voucher" prop="nominal">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-            {{row.nominal | rupiahFormater}}
+            {{row.total_value | rupiahFormater}}
           </ng-template>
         </ngx-datatable-column>
 
