--- a/src/app/pages/b2-bvoucher/panel-mitra-voucher/panel-mitra-voucher.component.html
+++ b/src/app/pages/b2-bvoucher/panel-mitra-voucher/panel-mitra-voucher.component.html
@@ -22,42 +22,48 @@
         </mat-form-field>
         <mat-form-field fxLayout="row" fxLayoutAlign="center center">
           <mat-select placeholder="Zone" formControlName="zone" multiple>
-            <mat-option [value]="item.id" *ngFor="let item of filteringGeotree(list['zone'])">{{item.name === 'all' ? 'Semua
+            <mat-option [value]="item.id" *ngFor="let item of filteringGeotree(list['zone'])">{{item.name === 'all' ?
+              'Semua
               Zona' :
               item.code}}</mat-option>
           </mat-select>
         </mat-form-field>
         <mat-form-field fxLayout="row" fxLayoutAlign="center center">
           <mat-select placeholder="Regional" formControlName="region" multiple>
-            <mat-option [value]="item.id" *ngFor="let item of filteringGeotree(list['region'])">{{item.name === 'all' ? 'Semua
+            <mat-option [value]="item.id" *ngFor="let item of filteringGeotree(list['region'])">{{item.name === 'all' ?
+              'Semua
               Regional' :
               item.code}}</mat-option>
           </mat-select>
         </mat-form-field>
         <mat-form-field fxLayout="row" fxLayoutAlign="center center">
           <mat-select placeholder="Area" formControlName="area" multiple>
-            <mat-option [value]="item.id" *ngFor="let item of filteringGeotree(list['area'])">{{item.name === 'all' ? 'Semua
+            <mat-option [value]="item.id" *ngFor="let item of filteringGeotree(list['area'])">{{item.name === 'all' ?
+              'Semua
               Area' :
               item.code}}</mat-option>
           </mat-select>
         </mat-form-field>
         <mat-form-field fxLayout="row" fxLayoutAlign="center center">
           <mat-select placeholder="Salespoint" formControlName="salespoint" multiple>
-            <mat-option [value]="item.id" *ngFor="let item of filteringGeotree(list['salespoint'])">{{item.name === 'all' ? 'Semua
+            <mat-option [value]="item.id" *ngFor="let item of filteringGeotree(list['salespoint'])">{{item.name ===
+              'all' ? 'Semua
               Salespoint' :
               item.code}}</mat-option>
           </mat-select>
         </mat-form-field>
         <mat-form-field fxLayout="row" fxLayoutAlign="center center">
           <mat-select placeholder="District" formControlName="district" multiple>
-            <mat-option [value]="item.id" *ngFor="let item of filteringGeotree(list['district'])">{{item.name === 'all' ? 'Semua
+            <mat-option [value]="item.id" *ngFor="let item of filteringGeotree(list['district'])">{{item.name === 'all'
+              ? 'Semua
               District' :
               item.code}}</mat-option>
           </mat-select>
         </mat-form-field>
         <mat-form-field fxLayout="row" fxLayoutAlign="center center">
           <mat-select placeholder="Territory" formControlName="territory" multiple>
-            <mat-option [value]="item.id" *ngFor="let item of filteringGeotree(list['territory'])">{{item.name === 'all' ? 'Semua
+            <mat-option [value]="item.id" *ngFor="let item of filteringGeotree(list['territory'])">{{item.name === 'all'
+              ? 'Semua
               Territory' :
               item.code}}</mat-option>
           </mat-select>
@@ -138,7 +144,8 @@
         </ng-template>
       </ngx-datatable-column>
     </ngx-datatable>
-    <div class="confirm p-24" fxLayout="row" fxLayoutAlign="center center" *ngIf="isDetail">
+    <div class="confirm p-24" fxLayout="row" fxLayoutAlign="center center"
+      *ngIf="isDetail && statusVoucher !== 'need-approval'">
       <button mat-raised-button type="button" class="confirmation-button" fxFlex="30" fxFlex.gt-xs="20"
         (click)="onSave()">
         SIMPAN
