--- a/src/app/pages/b2b-voucher-inject/create/b2b-voucher-inject-create.component.html
+++ b/src/app/pages/b2b-voucher-inject/create/b2b-voucher-inject-create.component.html
@@ -146,7 +146,9 @@
           </div>
         </mat-tab>
         <mat-tab label="Panel Mitra" *ngIf="isDetail || isEdit">
-          <app-panel-mitra-voucher (refreshDetail)="onRefreshDetail()"></app-panel-mitra-voucher>
+          <app-panel-mitra-voucher (refreshDetail)="onRefreshDetail()" [statusVoucher]="detailVoucher.status"
+            [permissions]="permission">
+          </app-panel-mitra-voucher>
         </mat-tab>
         <mat-tab label="Panel Retailer" *ngIf="isDetail || isEdit">
           <div class="ayo-middle p-24" fxLayout="column">
@@ -292,7 +294,8 @@
                   </ng-template>
                 </ngx-datatable-column>
               </ngx-datatable>
-              <div class="confirm p-24" fxLayout="row" fxLayoutAlign="center center" *ngIf="isEdit">
+              <div class="confirm p-24" fxLayout="row" fxLayoutAlign="center center"
+                *ngIf="isEdit && extraPermission()">
                 <button mat-raised-button type="button" class="confirmation-button" fxFlex="30" fxFlex.gt-xs="20"
                   (click)="onSavePanelRetailer()">
                   SIMPAN
