--- a/src/app/pages/user-management/paguyuban/edit/paguyuban-edit.component.html
+++ b/src/app/pages/user-management/paguyuban/edit/paguyuban-edit.component.html
@@ -41,19 +41,17 @@
           <div *ngIf="!isDetail">
             <div fxLayout="row">
               <mat-form-field fxFlex="100" class="is-light form-primary">
-                <input matInput type="text" *ngIf="showPassword" formControlName="password" placeholder="Kata sandi baru">
-                <input matInput type="password" *ngIf="!showPassword" formControlName="password" placeholder="Kata sandi baru">
+                <input matInput type="text" *ngIf="showPassword" formControlName="password" placeholder="Kata Sandi harus memiliki 8 karakter, serta mengandung huruf besar dan huruf kecil">
+                <input matInput type="password" *ngIf="!showPassword" formControlName="password" placeholder="Kata Sandi harus memiliki 8 karakter, serta mengandung huruf besar dan huruf kecil">
                 <button type="button" mat-button matSuffix mat-icon-button aria-label="Clear" (click)="showPassword = !showPassword">
                   <mat-icon *ngIf="!showPassword">remove_red_eye</mat-icon>
                   <mat-icon *ngIf="showPassword">visibility_off</mat-icon>
                 </button>
-                <mat-error
-                  *ngIf="formPaguyuban.controls['password'].hasError('required') && formPaguyuban.controls['password'].touched">
-                  Kata sandi harus diisi.
-                </mat-error>
-                <mat-error *ngIf="formPaguyuban.controls['password'].hasError('notValid')">
-                  Kata sandi Anda setidaknya harus memiliki, Panjang 8 karakter, 1 huruf besar & 1 karakter huruf kecil
-                  & 1 angka
+                <mat-error *ngIf="
+                  (formPaguyuban.controls['password'].hasError('required') && formPaguyuban.controls['password'].touched) ||
+                  (formPaguyuban.controls['password'].hasError('minlength') && formPaguyuban.controls['password'].touched) ||
+                  (formPaguyuban.controls['password'].hasError('strong') && formPaguyuban.controls['password'].touched)">
+                  Kata sandi harus memiliki 8 karakter, serta mengandung huruf besar dan huruf kecil
                 </mat-error>
               </mat-form-field>
             </div>
