--- a/src/app/pages/user-management/paguyuban/create/paguyuban-create.component.html
+++ b/src/app/pages/user-management/paguyuban/create/paguyuban-create.component.html
@@ -41,11 +41,11 @@
                 </mat-error>
               </mat-form-field>
               <div fxLayout="column">
-                <!-- <label for="" style="color: #333333;">Kata Sandi harus memiliki 8 karakter, serta mengandung huruf besar dan huruf kecil</label> -->
+                <label for="" class="mb-15" style="color: #333333;">Kata Sandi harus memiliki 8 karakter, serta mengandung huruf besar dan huruf kecil</label>
                 <mat-form-field fxFlex="100" class="is-light mb-24">
-                  <input matInput type="text" *ngIf="showPassword" formControlName="password" placeholder="Kata Sandi harus memiliki 8 karakter, serta mengandung huruf besar dan huruf kecil">
+                  <input matInput type="text" *ngIf="showPassword" formControlName="password" placeholder="Kata Sandi">
                   <input matInput type="password" *ngIf="!showPassword" formControlName="password"
-                    placeholder="Kata Sandi harus memiliki 8 karakter, serta mengandung huruf besar dan huruf kecil">
+                    placeholder="Kata Sandi">
                   <button type="button" mat-button matSuffix mat-icon-button aria-label="Clear"
                     (click)="showPassword = !showPassword">
                     <mat-icon *ngIf="!showPassword">remove_red_eye</mat-icon>
