--- a/src/app/pages/user-management/paguyuban/edit/paguyuban-edit.component.html
+++ b/src/app/pages/user-management/paguyuban/edit/paguyuban-edit.component.html
@@ -39,10 +39,11 @@
           </mat-form-field>
 
           <div *ngIf="!isDetail">
-            <div fxLayout="row">
+            <div fxLayout="column">
+              <label for="" style="color: #333333;">Kata Sandi harus memiliki 8 karakter, serta mengandung huruf besar dan huruf kecil</label>
               <mat-form-field fxFlex="100" class="is-light form-primary">
-                <input matInput type="text" *ngIf="showPassword" formControlName="password" placeholder="Kata Sandi harus memiliki 8 karakter, serta mengandung huruf besar dan huruf kecil">
-                <input matInput type="password" *ngIf="!showPassword" formControlName="password" placeholder="Kata Sandi harus memiliki 8 karakter, serta mengandung huruf besar dan huruf kecil">
+                <input matInput type="text" *ngIf="showPassword" formControlName="password" placeholder="Kata Sandi">
+                <input matInput type="password" *ngIf="!showPassword" formControlName="password" placeholder="Kata Sandi">
                 <button type="button" mat-button matSuffix mat-icon-button aria-label="Clear" (click)="showPassword = !showPassword">
                   <mat-icon *ngIf="!showPassword">remove_red_eye</mat-icon>
                   <mat-icon *ngIf="showPassword">visibility_off</mat-icon>
