--- a/src/app/pages/b2-bvoucher/create/b2-b-voucher-create.component.html
+++ b/src/app/pages/b2-bvoucher/create/b2-b-voucher-create.component.html
@@ -196,11 +196,13 @@
                   (click)="onSaveDetail()">
                   SIMPAN
                 </button>
-                <button *ngFor="let item of listStatuses" mat-raised-button type="button"
-                  [ngClass]="item.value === 'rejected' ? 'confirmation-button' : 'mat-green-800-bg'" fxFlex="20"
-                  style="margin-left: 10px;" (click)="takeAction(item)">
-                  {{item.name ? item.name.toUpperCase() : item.name}}
-                </button>
+                <ng-container *ngIf="checkForNonApprover()">
+                  <button *ngFor="let item of listStatuses" mat-raised-button type="button"
+                    [ngClass]="item.value === 'rejected' ? 'confirmation-button' : 'mat-green-800-bg'" fxFlex="20"
+                    style="margin-left: 10px;" (click)="takeAction(item)">
+                    {{item.name ? item.name.toUpperCase() : item.name}}
+                  </button>
+                </ng-container>
                 <button mat-raised-button type="button" *ngIf="detailVoucher && detailVoucher.status === 'published'"
                   fxFlex="20" style="margin-left: 10px;" disabled>
                   PUBLISHED
