--- a/src/app/pages/b2b-voucher-inject/create/b2b-voucher-inject-create.component.html
+++ b/src/app/pages/b2b-voucher-inject/create/b2b-voucher-inject-create.component.html
@@ -77,8 +77,7 @@
                 </div>
 
                 <mat-form-field fxFlex="50" class="pt-24" *ngIf="formDetilVoucher.get('limit_by_product').value">
-                  <mat-chip-list #chipList aria-label="Product List"
-                    [disabled]="!formDetilVoucher.get('limit_by_product').value">
+                  <mat-chip-list #chipList aria-label="Product List">
                     <mat-chip *ngFor="let product of productList" [selectable]="selectable" [removable]="removable"
                       (removed)="remove(product)">
                       {{product.name}}
@@ -101,8 +100,7 @@
                 </mat-form-field>
 
                 <mat-form-field fxFlex="50">
-                  <mat-select placeholder="Batasan Berdasarkan Kategori" formControlName="category"
-                    [disabled]="!formDetilVoucher.get('limit_by_category').value" multiple>
+                  <mat-select placeholder="Batasan Berdasarkan Kategori" formControlName="category" multiple>
                     <mat-option *ngFor="let cat of listCategories" [value]="cat.id">{{ cat.name }}</mat-option>
                   </mat-select>
                 </mat-form-field>
@@ -157,7 +155,8 @@
             <div>
               <div class='import-export-bar p-16' fxLayoutGap="20px" fxLayout="row wrap" fxLayoutAlign="end center">
                 <div class="button-row">
-                  <button mat-flat-button style="width: 160px" color="white" (click)="importRetailer()">
+                  <button mat-flat-button style="width: 160px" color="white" (click)="importRetailer()"
+                    *ngIf="!this.permission.b2b_approval">
                     <mat-icon>vertical_align_bottom</mat-icon> Import XLS
                   </button>
                 </div>
