--- a/src/app/pages/b2-bvoucher/create/b2-b-voucher-create.component.html
+++ b/src/app/pages/b2-bvoucher/create/b2-b-voucher-create.component.html
@@ -190,8 +190,8 @@
                 </div>
               </div> -->
               <div class="confirm p-24" fxLayout="row" fxLayoutAlign="start">
-                <button mat-raised-button type="button" class="confirmation-button" fxFlex="30" fxFlex.gt-xs="20"
-                  (click)="onSaveDetail()">
+                <button mat-raised-button type="button" class="confirmation-button" *ngIf="whyYouCantSeeMe()"
+                  fxFlex="30" fxFlex.gt-xs="20" (click)="onSaveDetail()">
                   SIMPAN
                 </button>
                 <ng-container *ngIf="checkForNonApprover()">
