Fix GSM PL sort

--- a/src/app/pages/user-management/retailer/index/retailer-index.component.html
+++ b/src/app/pages/user-management/retailer/index/retailer-index.component.html
@@ -134,7 +134,7 @@
             </mat-select>
           </mat-form-field>
           <mat-form-field fxFlex="16" class="is-light form-primary">
-            <mat-select placeholder="GSM PL" [formControl]="gsm_pl_flag">
+            <mat-select placeholder="GSM PL" [formControl]="gsm_pl">
               <mat-option *ngFor="let item of listGSM" [value]="item.value">{{item.name}}</mat-option>
             </mat-select>
           </mat-form-field>
@@ -191,7 +191,7 @@
             {{row.gsr_flag === 1 ? 'On' : 'Off'}}
           </ng-template>
         </ngx-datatable-column>
-        <ngx-datatable-column name="GSM PL" prop="gsm_pl_flag" summary-template="activeCell">
+        <ngx-datatable-column name="GSM PL" prop="gsm_pl" summary-template="activeCell">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             {{row.gsm_pl === 1 ? 'On' : 'Off'}}
           </ng-template>
