--- a/src/app/pages/sku-management/product/edit/product-edit.component.html
+++ b/src/app/pages/sku-management/product/edit/product-edit.component.html
@@ -219,8 +219,9 @@
                       </button>
                     </div>
                   </div>
-                  <div style="margin-left: 25px;margin-bottom: 15px;" fxLayout="row wrap">
-                    <div fxFlex="10" style="margin-top: 15px;" *ngIf="!formProductGroup.get('is_private_label').value">
+                  <div style="margin-left: 25px;margin-bottom: 15px;" fxLayout="row wrap"
+                    *ngIf="formProductGroup.get('is_promo_src').value && i === 0">
+                    <div fxFlex="10" style="margin-top: 15px;">
                       <mat-checkbox formControlName="time_period">Periode Waktu</mat-checkbox>
                     </div>
                     <div fxLayout="row" fxFlex="85" *ngIf="wil.get('time_period').value === true">
